# refactor-parser-framework

./: A.hs  B.hs  CTransform.hs  MiniC.hs  MiniLanguage.hs  README.md  RemixC.hs  Test.hs
Language/Haskell/: Refactor.hs
Language/Haskell/Refactor/: AST.hs  Analyzer.hs  GHC2AST.hs  Parser.hs
Language/Haskell/Refactor/AST/: Base.hs  Decl.hs  Module.hs
Language/Haskell/Refactor/Parser/: Base.hs  Decl.hs  Module.hs
MiniC/: GenTemplate.hs  Helpers.hs  Instances.hs  ParseProgram.hs  Parser.hs  PrettyPrint.hs  RangeTree.hs  Representation.hs  Semantics.hs  TransformInfo.hs
MiniC/Parser/: Base.hs
SourceCode/: ASTElems.hs  InfoTypes.hs  PrettyPrint.hs  RangeTree.hs  Semantics.hs  SourceNotation.hs  TransformInfo.hs
SourceCode/Templates/: SourceTemplates.hs
Test/HUnit/: Find.hs  Parsec.hs
Text/Preprocess/: Rewrites.hs
src/smart-traversal/: smart-traversal.cabal  stack.yaml  vimsession.vim
src/smart-traversal/Data/SmartTrav/: TH.hs
src/smart-traversal/test/: Test.hs
testfiles/ok/: proba28-define.c
