name:                smart-traversal
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/smart-traversal#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.SmartTrav
                     , Data.SmartTrav.Class
                     , Data.SmartTrav.Example
                     , Data.SmartTrav.Indexing
                     , Data.SmartTrav.Instances
                     , Data.SmartTrav.TH
  build-depends:       base >= 4.7 && < 5
                     , template-haskell >= 2.10.0.0
                     , mtl >= 2.2.1
  default-language:    Haskell2010

--executable smart-traversal-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , smart-traversal
--  default-language:    Haskell2010

test-suite smart-traversal-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , smart-traversal
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/smart-traversal
